dev_ws/log/build_2020-11-18_02-17-26/dec_to_oct_hex/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\dec_to_oct_hex\subscriber.py", line 21
    def listener_callback(self, &msg):
                                ^
SyntaxError: invalid syntax

